// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert correctly 1`] = `
<p
  id="test"
>
  This is cool
</p>
`;

exports[`convert style values 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "padding": "0 10px",
    }
  }
>
  <span
    style={
      Object {
        "fontSize": 12,
      }
    }
  />
</div>
`;

exports[`css html entities 1`] = `
<div
  style={
    Object {
      "fontFamily": "Consolas, \\"Liberation Mono \\"",
    }
  }
/>
`;

exports[`css vendor prefixes 1`] = `
<div
  style={
    Object {
      "WebkitTextSizeAdjust": "100%",
      "msTextSizeAdjust": "100%",
    }
  }
>
  
      prefix
    
</div>
`;

exports[`custom component 1`] = `
<p
  className="css-x243s"
  data-custom="true"
>
  Custom component
</p>
`;

exports[`element inside text node 1`] = `
<div>
  what are 
  <strong>
    you
  </strong>
   doing?
</div>
`;

exports[`ignore comment 1`] = `
<div>
  no comment
</div>
`;

exports[`ignore invalid style 1`] = `
<div
  className="component-overflow"
  style={Object {}}
>
  Explore Categories
</div>
`;

exports[`ignore multiline html comment 1`] = `
<div>
  no multiline comment
</div>
`;

exports[`ignore partially invalid style 1`] = `
<div
  className="component-overflow"
  style={
    Object {
      "color": "\\"red\\"",
    }
  }
>
  Explore Categories
</div>
`;

exports[`multi children 1`] = `
<div>
  <p>
    Multi
  </p>
  <p>
    Component
  </p>
</div>
`;

exports[`preserve child of style tag 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": "
      ul > li {
        list-style: none
      }

      div[data-id=\\"test\\"]:not(.y) {
        display: none;
      }
    ",
    }
  }
/>
`;

exports[`self closing component 1`] = `
<div>
  <img
    src="https://www.google.com/logo.png"
  />
  <iframe
    src="https://www.youtube.com/embed/I2-_iLzmkVw"
  />
</div>
`;

exports[`style with url & protocol 1`] = `
<div
  className="tera-promo-card--header"
  style={
    Object {
      "backgroundImage": "url(https://d1nabgopwop1kh.cloudfront.net/xx)",
    }
  }
/>
`;

exports[`supports valid html attribute 1`] = `
<div
  aria-describedby="info"
  data-type="calendar"
>
  <link
    xlinkActuate={undefined}
    xmlLang={undefined}
  />
  <svg
    colorInterpolationFilters={undefined}
    fillRule={undefined}
  >
    <path
      fill="#fa0"
    />
  </svg>
</div>
`;

exports[`unescape html entities 1`] = `
<div
  className="entities"
>
  & and &
</div>
`;

exports[`unsafe html attributes 1`] = `
<label
  className="input-text"
  htmlFor="name"
/>
`;
